* Fix width of table in table view (i.e. prevent overflow)

--- a/theme/css/dictionary-viewer.css
+++ b/theme/css/dictionary-viewer.css
@@ -13,6 +13,10 @@ pre.code-shard {
   white-space: pre-wrap;
 }
 
+.code-constrained-width {
+  max-width: 172px;
+}
+
 
 .navbar.navbar-default {
   padding-right: 0 !important;
